--- a/estilo.css
+++ b/estilo.css
@@ -1,18 +1,22 @@
+
 body {
   overflow-x: hidden;
   overflow-y: hidden;
   background-color: #fff;
 }
+
 #medidorPlaneta {
   border: 2px solid #000;
   width: 300px;
   height: 20px;
   background-color: #fff;
+
 }
 #barraPlaneta {
   width: 300px;
   height: 20px;
   background-color: #66f;
+  
 }
 .navJog {
   width: 40px;
@@ -40,7 +44,7 @@ body {
 .tiroJog {
   width: 6px;
   height: 6px;
-  background-color: #000;
+  background-color: #ff8c00;
   border-radius: 10px;
   position: absolute;
 }
