--- a/estilo.css
+++ b/estilo.css
@@ -5,6 +5,14 @@ body {
   background-color: #fff;
 }
 
+body {
+  background-image: url(/Imagens/uni.jpg);
+  background-position: center center;
+  background-repeat: repeat repeat;
+  background-size: cover;
+  
+}
+
 #medidorPlaneta {
   border: 2px solid #000;
   width: 300px;
