--- a/estilo.css
+++ b/estilo.css
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  background-image: url("./Imagens/uni.jpg");
+  background-image: url("./midia/uni.jpg");
   background-position: center center;
   background-repeat: repeat repeat;
   background-size: cover;
@@ -42,7 +42,7 @@ body {
   width: 40px;
   height: 40px;
   background-size: cover;
-  background-image: url("./Imagens/AsteroidBrown.png");
+  background-image: url("./midia/AsteroidBrown.png");
   position: absolute;
 }
 /* .contBombas img {
@@ -65,13 +65,4 @@ body {
   width: 70px;
   height: 70px;
   position: absolute;
-}
-.telaMsg {
-  position: absolute;
-  margin-left: 25%;
-  top: 50px;
-  left: 50%;
-  width: 720px;
-  height: 621px;
-  display: none;
 }
